typo. Thank Ms Xie.

--- a/deadlock/deadlock.tex
+++ b/deadlock/deadlock.tex
@@ -389,7 +389,7 @@
     \item $Need$:  $n \times m$ matrix. If $Need[i,j] = k$, then $P_i$ may need $k$ more instances of $R_j$ to complete its task.  \pause
       \begin{itemize}
       \item $Need[i,j] = Max[i,j] - Allocation [i,j]$.  \pause
-      \item $Need_i$ means $i$th row of the $Nead$. 
+      \item $Need_i$ means $i$th row of the $Need$.
       \end{itemize}
     \end{itemize}
   \end{itemize}
